[tool.poetry]
name = "pokestream"
version = "0.1.0"
description = ""
authors = ["Elias Tavarez <etav@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
loguru = "^0.7.0"
plotly = "^5.16.1"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.0.285"
pytest = "^7.4.0"
black = "^23.7.0"
kaggle = "^1.5.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["ALL"]
fixable = ["ALL"]
ignore = [
	"FA102",
	"D417",
	"D400",
	"D100"
]
